[project]
name = "commissioningscheduler"
version = "0.1.0"
description = ""
authors = [
    {name = "Ben Hord",email = "drbenhord@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "rich (>=13.9.4,<14.0.0)",
    "numpy (>=1.23.2)",
    "appdirs (>=1.4.4,<2.0.0)",
    "matplotlib (>=3.9.1)",
    "astropy (>=6.1.7)",
    "pandas (>=2.1.0)",
    "numexpr (>=2.8.5)",
]

[tool.poetry]
packages = [{include = "commissioningscheduler", from = "src"}]

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
black = "^25.1.0"
isort = "^6.0.0"
flake8 = "^7.1.2"
jupyterlab = "^4.3.5"
mkdocs = "^1.6.1"
mkdocs-jupyter = "^0.25.1"
mkdocs-material = "^9.6.5"
pytkdocs = {version = "^0.16.2", extras = ["numpy-style"]}
mkdocs-include-markdown-plugin = "^7.1.4"
mkdocstrings = {version = "^0.28.2", extras = ["python"]}
jupyter-contrib-nbextensions = "^0.7.0"
notebook = ">=6.0.0,<7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79

[tool.isort]
import_heading_firstparty = 'First-party/Local'
import_heading_future = 'Future'
import_heading_stdlib = 'Standard library'
import_heading_thirdparty = 'Third-party'
line_length = 79
multi_line_output = 3
no_lines_before = 'LOCALFOLDER'
profile = 'black'
